"Assign rulers, create country, sudo commands, character dashboard, ..."